consilidate and rename clara decoder services